# mdbook-plugins

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json
docs/: book.toml
docs/src/: MAINTENANCE.md  SUMMARY.md  architecture.md  deployment.md  developer-guide.md  overview.md  pdf-implementation.md  plugin-reference.md
src/: build_search.rs  lib.rs  main.rs  utils.rs
src/preprocessors/: admonish.rs  alerts.rs  echarts.rs  embedify.rs  emojicodes.rs  image_viewer.rs  katex.rs  kroki.rs  langtabs.rs  mermaid.rs  mod.rs  pikchr.rs  svgbob.rs  toc.rs  unified.rs  wavedrom.rs
src/renderers/: asciidoc.rs  build_search.rs  linkcheck.rs  mod.rs  office.rs  pdf.rs  pdf_chrome_cdp.rs  pdf_chrome_cdp_light.rs  pdf_html_preprocess.rs  pdf_outline.rs
src/tikz/: engine.rs  mod.rs  pdf2svg.rs
test/: book.toml  verify.sh
test-mini/: book.toml
test-mini/src/: SUMMARY.md  chapter1.md  chapter2.md  intro.md  section1-1.md  section1-2.md  section2-1.md
test/assets/bytefield/: bytefield-svg.js
test/assets/help/: support.js
test/assets/langtabs/: langtabs.js
test/assets/mermaid/: mermaid-init.js  mermaid.css  mermaid.min.js
test/assets/translate/: translate.css  translate_button.js
test/assets/whichlang/: whichlang.css
test/src/: SUMMARY.md
test/src/3rd/pybind11/: 16.案例.md
test/src/basic/: admonish.md  markdown.md
test/src/images/Latex_Pictures/: demo1_0.tex  demo2_1.tex  demo3_2.tex  demo4_3.tex  demo5_4.tex  demo6_5.tex  demo7_6.tex  demo8_7.tex  samples_8.tex
test/src/images/Typst/: demo0_0.typ
test/src/test/: 0.mathjax.md  1.katex.md  10.emoji.md  11.typst.md  2.whichlang.md  3.langtabs.md  4.kroki.md  5.echarts.md  6.bytefield.md  7.latex_pictures.md  8.latex_document.md  9.wavedrom.md
test/theme/: index.hbs
test/theme/css/: general.css
