[package]
name = "mdbook-plugins"
version = "0.1.0"
edition = "2021"
description = "单二进制多插件支持的 mdbook 插件集合"
authors = ["mdbook-plugins"]

[[bin]]
name = "mdbook-plugins"
path = "src/main.rs"

[lib]
name = "mdbook_plugins"
path = "src/lib.rs"

[dependencies]
# Core mdbook 生态
mdbook-core = "0.5"
mdbook-preprocessor = "0.5"
mdbook-renderer = "0.5"
mdbook-markdown = "0.5"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "cargo"] }
regex = "1"
semver = "1"
log = "0.4"
once_cell = "1"
env_logger = "0.11"

# 通用工具
toml = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
emojis = "0.6"
lazy_static = "1"
rust-embed = "8"

# SVG 渲染 (svgbob)
svg = "0.18"
svgbob = "0.7"
pulldown-cmark-to-cmark = "22"

# HTTP/异步 (kroki, linkcheck)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
base64 = "0.22"
flate2 = "1"

# KaTeX — 纯 Rust 实现，无需 Node.js
katex-rs = "0.2.4"
rayon = "1"

# C 依赖 (pikchr)
libc = "0.2"

# URL
url = "2"

# 模板/嵌入 (embedify)
pest = "2"
serde_yaml = "0.9"

# AsciiDoc 渲染

# Office 渲染
office_oxide = "0.1"
chromiumoxide = "0.9.1"
chromiumoxide_cdp = "0.9.1"

# 轻量 CDP 客户端（替代 chromiumoxide）
tokio-tungstenite = "0.24"

# HTML DOM 解析（PDF HTML 预处理）
scraper = "0.22"

# PDF 后处理（大纲/书签 + 元数据）
lopdf = "0.34"
indexmap = "2"
tempfile = "3"

# 特性开关
[features]
default = ["all"]
all = [
    "pre-alerts", "pre-emojicodes", "pre-toc", "pre-echarts",
    "pre-langtabs", "pre-mermaid", "pre-katex", "pre-admonish",
    "pre-svgbob", "pre-pikchr", "pre-kroki", "pre-embedify",
    "pre-image-viewer",
    "pre-wavedrom",
    "ren-asciidoc", "ren-linkcheck", "ren-office", "ren-pdf",
]
pre-alerts = []
pre-emojicodes = []
pre-toc = []
pre-echarts = []
pre-langtabs = []
pre-mermaid = []
pre-katex = []
pre-admonish = []
pre-svgbob = []
pre-pikchr = []
pre-kroki = []
pre-embedify = []
pre-image-viewer = []
pre-wavedrom = []
ren-asciidoc = []
ren-linkcheck = []
ren-office = []
ren-pdf = []

[build-dependencies]
cc = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
